# rego-cpp

./: .gitignore  CMakeLists.txt  README.md  TODO.md  TODO.txt
examples/c/: example.c
examples/cpp/: example.cc
include/rego/: rego.hh  rego_c.h
src/: CMakeLists.txt  builtins.cc  bundle_binary.cc  encoding.cc  fast.cc  fast.hh  internal.cc  internal.hh  interpreter.cc  ir.cc  ir.hh  ir_json.cc  output.cc  reader.cc  rego_c.cc  rego_to_bundle.cc  resolver.cc  unify.hh  virtual_machine.cc
src/builtins/: aggregates.cc  arrays.cc  aws.cc  bits.cc  builtins.h  builtins.hh  casts.cc  comparison.cc  conversions.cc  crypto.cc  encoding.cc  glob.cc  graph.cc  graphql.cc  http.cc  internal.cc  json.cc  jwt.cc  net.cc  numbers.cc  objects.cc  regex.cc  rego.cc  semver.cc  sets.cc  strings.cc  time.cc  types.cc  units.cc  uuid.cc
tests/: CMakeLists.txt  c_api.cc  cpp_api.cc  fast.yaml  ir_compat.cc  main.cc  test_case.cc  test_case.h
tests/cts/: cts.yaml
tests/ir/: irvm.py
tests/ir/objects/bundle/: plan.json
tools/: CMakeLists.txt  compile.cc  fuzzer.cc  main.cc
tools/examples/: bodies.rego  compr.rego  errors.rego  every.rego  keywords.rego
tools/examples/bodies/: data.json
tools/examples/every/: policy.rego
tools/examples/functions/: functions.rego  input.json
tools/examples/keywords/: input.json  keywords.rego
tools/examples/multi/: multi.rego
wrappers/dotnet/Rego/: Interpreter.cs  README.md
wrappers/python/: README.md
wrappers/python/src/regopy/: interpreter.py  rego_shared.py
wrappers/rust/regorust/: README.md
(+1 files in other folders)
